--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/3857b0a1bd.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -39,8 +39,10 @@
     <header class="header header__img">
         <div class="wrapper">
             <div class="header__container">
-                <h1 class="header__title">Witamy w CosPlay Café!</h1>
-                <p class="header__text">Wypełnij poniższy formularz, aby móc zarezrowawać stolik</p>
+                <h1 class="header__title" data-aos="fade-right" data-aos-duration="2000">Witamy w CosPlay Café!</h1>
+                <p class="header__text" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">Wypełnij
+                    poniższy formularz, aby
+                    móc zarezrowawać stolik</p>
             </div>
         </div>
         <div class="header__shadow"></div>
@@ -52,7 +54,7 @@
             <div class="underline"></div>
 
 
-            <form class="reservations-form form">
+            <form class="reservations-form form" data-aos="zoom-in-down">
 
                 <div class="form__top">
                     <div class="form__top-line form__top-line--reservation">
@@ -108,7 +110,8 @@
                     </div>
                 </div>
 
-                <button class="btn form__btn form__btn--reservation">Wybierz</button>
+                <button class="btn form__btn form__btn--reservation" data-aos="flip-left"
+                    data-aos-duration="2000">Wybierz</button>
             </form>
 
         </div>
@@ -131,11 +134,11 @@
 
     </footer>
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
+    <script src="./js/aos.js"></script>
     <script src="./js/rezerwacje.js"></script>
 
 </body>
