--- a/index.html
+++ b/index.html
@@ -61,32 +61,34 @@
             <div class="wrapper">
                 <h2 class="section__heading">O nas</h2>
                 <div class="underline"></div>
-                <p class="aboutus__text" data-aos="zoom-in-right">Jesteśmy grupą pasjonatów cosplay,
-                    od dziecka
-                    spędzaliśmy czas w świecie
-                    fantastyki, wiemy jak wymagające jest hobby i doskonale rozumiemy potrzeby kogoś kto poświęca swój
+                <p class="aboutus__text" data-aos="zoom-out-up" data-aos-duration="1500">Jesteśmy grupą pasjonatów
+                    cosplay, od dziecka spędzaliśmy czas w świecie fantastyki, wiemy jak wymagające jest hobby i
+                    doskonale rozumiemy potrzeby kogoś kto poświęca swój
                     czas pracując godzinami projektując swój strój na konwenty. Żadne wielkie wydarzenie nie obejdzie
                     się bez dzbanka gorącej kawy lub herbaty a dodatkowo wiemy jak ciężkie są miesiące gdzie nie ma
                     żadnych tego typu wydarzeń dlatego u nas możesz przeżywać ten klimat każdego dnia!</p>
                 <div class="aboutus__items">
-                    <div class="aboutus__container" data-aos="zoom-out-up" data-aos-delay="300">
-                        <i class="fa-solid fa-hat-wizard aboutus__icon"></i>
+                    <div class="aboutus__container" data-aos="zoom-out-up" data-aos-delay="300"
+                        data-aos-duration="1500">
+                        <i class=" fa-solid fa-hat-wizard aboutus__icon"></i>
                         <h3 class="aboutus__heading">Kelnerzy cosplayerzy</h3>
                         <p class="aboutus__container-text">Nawet jeśli przyjdziesz w jeansach to my zawsze będziemy w
                             naszych tematycznych strojach! Co 2 tygodnie zmieniamy cosplaye utrzymując fantastyczny
                             klimat. Organizujemy także dla was głosowania które będą decydowały o tematyce strojów w
                             których będziemy wam serwować ciepłe napoje!</p>
                     </div>
-                    <div class="aboutus__container" data-aos="zoom-out-up" data-aos-delay="500">
-                        <i class="fa-solid fa-utensils aboutus__icon"></i>
+                    <div class="aboutus__container" data-aos="zoom-out-up" data-aos-delay="500"
+                        data-aos-duration="1500">
+                        <i class=" fa-solid fa-utensils aboutus__icon"></i>
                         <h3 class="aboutus__heading">Tematyczne menu</h3>
                         <p class="aboutus__container-text">Nasze menu jest przede wszystkim odpowiedzią na trudy życia
                             cosplayowca a także smętne nazwy które już są oklepane. Poza starannie zrobionym menu razem
                             z innymi cosplayerami zmieniamy specjalne menu co 2 tygodnie aby dopasować menu do ciągle
                             zmieniających się światów!.</p>
                     </div>
-                    <div class="aboutus__container" data-aos="zoom-out-up" data-aos-delay="700">
-                        <i class="fa-regular fa-calendar aboutus__icon"></i>
+                    <div class="aboutus__container" data-aos="zoom-out-up" data-aos-delay="700"
+                        data-aos-duration="1500">
+                        <i class=" fa-regular fa-calendar aboutus__icon"></i>
                         <h3 class="aboutus__heading">Fantastyczne eventy</h3>
                         <p class="aboutus__container-text">Jako że sam klimat i napoje to dla niektórych trochę za mało
                             to normą u nas przyjęło się prowadzenie eventów, które za każdym razem będą inne, to zawsze
@@ -296,9 +298,10 @@
                     </button>
                 </div>
 
-                <div class="cards-container d-md-none ">
-                    <div class="card">
-                        <img src="./img/events_alice.jpg" class="card-img-top" alt="...">
+                <div class="cards-container d-md-none">
+                    <div class="card" data-aos="zoom-out-up" data-aos-duration="1500">
+                        <img src="./img/events_alice.jpg" class="card-img-top"
+                            alt="Kobietę siedząca przy stole, przebrana za Szalonego Kapelusznika. W tle można dostrzec kota Cheshire.">
                         <div class="card-body">
                             <h3 class="card-title">Czarodziejskie Spotkanie w Kawiarni</h3>
                             <p class="card-text">Weź udział w zaczarowanym wydarzeniu, które przeniesie Cię w świat
@@ -310,8 +313,9 @@
                         </div>
                     </div>
 
-                    <div class="card">
-                        <img src="./img/events_harry.jpg" class="card-img-top" alt="...">
+                    <div class="card" data-aos="zoom-out-up" data-aos-duration="1500">
+                        <img src="./img/events_harry.jpg" class="card-img-top"
+                            alt="Osoba trzyma dwie kolby sugerujące mieszanie eliksirów, a także garnek z jakimś wywarem.">
                         <div class="card-body">
                             <h3 class="card-title">Magiczna Noc w Kawiarni Zaklęć</h3>
                             <p class="card-text">Odkryj niezwykłe zaklęcia smaku w naszej kawiarni, gdzie magia spotyka
@@ -324,8 +328,9 @@
                         </div>
                     </div>
 
-                    <div class="card">
-                        <img src="./img/events_pokemon.jpg" class="card-img-top" alt="...">
+                    <div class="card" data-aos="zoom-out-up" data-aos-duration="1500">
+                        <img src="./img/events_pokemon.jpg" class="card-img-top"
+                            alt="Stolik na którym znajduje się bukiet kwiatów oraz figurka Pokemona - Eevee.">
                         <div class="card-body">
                             <h3 class="card-title">Pokémonowa Wyprawa: Gotta Catch 'Em All!</h3>
                             <p class="card-text">Przyłącz się do naszej Pokémonowej wyprawy w kawiarni, gdzie czeka na
@@ -348,11 +353,11 @@
                 <h2 class="section__heading">Kontakt</h2>
                 <div class="underline"></div>
 
-                <h3 class="contact__heading" data-aos="fade-right" data-aos-duration="2000">Skontaktuj się z nami</h3>
-                <p class="contact__text" data-aos="fade-right" data-aos-duration="2000">Masz do nas pytania czarodzieju?
+                <h3 class="contact__heading" data-aos="fade-right" data-aos-duration="1500">Skontaktuj się z nami</h3>
+                <p class="contact__text" data-aos="fade-right" data-aos-duration="1500">Masz do nas pytania czarodzieju?
                     Napisz do nas!</p>
 
-                <form class="form" data-aos="zoom-in-right">
+                <form class="form" data-aos="zoom-out-up" data-aos-duration="1500">
 
                     <div class="form__top">
                         <div class="form__top-line">
