--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -54,7 +54,7 @@
             <div class="underline"></div>
 
 
-            <form class="reservations-form form" data-aos="zoom-in-down">
+            <form class="reservations-form form" data-aos="zoom-in-down" data-aos-duration="2000">
 
                 <div class="form__top">
                     <div class="form__top-line form__top-line--reservation">
