--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                             data-aos-duration="2000">Zarezerwuj
                             stolik</button></a>
                 </div>
+                <div class="arrow">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </div>
         <div class="header__shadow"></div>
