--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -30,7 +30,6 @@
                 <a href="index.html#contact" data-selector="#contact" class="nav__items js-items">Kontakt</a>
             </div>
             <div class="nav_btn-container">
-                <!-- <a href="#cart" class="nav__items"><i class="fa-solid fa-basket-shopping"></i></a> -->
                 <button class="nav__btn"> <i class="fa-solid fa-bars nav__bars "></i></button>
             </div>
 
@@ -43,6 +42,11 @@
                 <p class="header__text" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">Wypełnij
                     poniższy formularz, aby
                     móc zarezrowawać stolik</p>
+                <div class="arrow">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </div>
         <div class="header__shadow"></div>
